  against the same curses library is currently not enabled.

- Issue #8973: Add __all__ to struct module; this ensures that
  help(struct) includes documentation for the struct.Struct class.

- Issue #2810: Fix cases where the Windows registry API returns
  ERROR_MORE_DATA, requiring a re-try in order to get the complete result.

Build
-----

- Issue #4026: Make the fcntl extension build under AIX.  Patch by Sébastien
  Sablé.

- Issue #3101: Helper functions _add_one_to_index_C() and
  _add_one_to_index_F() become _Py_add_one_to_index_C() and
  _Py_add_one_to_index_F(), respectively.

- Issue #9700: define HAVE_BROKEN_POSIX_SEMAPHORES under AIX 6.x.  Patch by
  Sébastien Sablé.

- Issue #3928: os.mknod() now available in Solaris, also.

- Issue #6716: Quote -x arguments of compileall in MSI installer.
  Exclude 2to3 tests from compileall.

- Issue #1628484: The Makefile doesn't ignore the CFLAGS environment
  variable anymore.  It also forwards the LDFLAGS settings to the linker
  when building a shared library.

Tests
-----

- Issue #7564: Skip test_ioctl if another process is attached to /dev/tty.

- Issue #8857: Provide a test case for socket.getaddrinfo.

- Issue #8433: Fix test_curses failure with newer versions of ncurses.

- Issue #9496: Provide a test suite for the rlcompleter module.  Patch by
  Michele Orrù.

- Issue #9251: test_threaded_import didn't fail when run through regrtest
  if the import lock was disabled.

- Issue #7449: Skip test_socketserver if threading support is disabled

- Issue #8672: Add a zlib test ensuring that an incomplete stream can be
  handled by a decompressor object without errors (it returns incomplete
  uncompressed data).

- Issue #8629: Disable some test_ssl tests, since they give different
  results with OpenSSL 1.0.0 and higher.

- Issue #8533: regrtest uses backslashreplace error handler for stdout to avoid
  UnicodeEncodeError (write non-ASCII character to stdout using ASCII encoding)
